add hike planning page
