# api/app/controllers/shared.py
@@ -19,23 +19,23 @@ def list_hikes() -> []:
     select_str = \
         "SELECT id, name, start_time, end_time, start_lat, start_long, end_lat, end_long FROM trailTracker.hike"
 
-    with mysql.connector.connect(**dbParams) as conn:
-        with conn.cursor() as cursor:
-            cursor.execute(select_str)
+    # with mysql.connector.connect(**dbParams) as conn:
+    #     with conn.cursor() as cursor:
+    #         cursor.execute(select_str)
 
-            row = cursor.fetchone()
-            while row:
-                hike = Hike()
-                hike.id = row[0]
-                hike.name = row[1]
-                hike.startTime = row[2]
-                hike.endTime = row[3]
-                hike.startLat = row[4]
-                hike.startLong = row[5]
-                hike.endLat = row[6]
-                hike.endLong = row[7]
+    #         row = cursor.fetchone()
+    #         while row:
+    #             hike = Hike()
+    #             hike.id = row[0]
+    #             hike.name = row[1]
+    #             hike.startTime = row[2]
+    #             hike.endTime = row[3]
+    #             hike.startLat = row[4]
+    #             hike.startLong = row[5]
+    #             hike.endLat = row[6]
+    #             hike.endLong = row[7]
 
-                hikes.append(hike)
-                row = cursor.fetchone()
+    #             hikes.append(hike)
+    #             row = cursor.fetchone()
 
     return hikes
